--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!--=============== FAVICON ===============-->
-      <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+      <!-- <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon"> -->
 
       <!--=============== REMIXICONS ===============-->
       <link href="https://cdn.jsdelivr.net/npm/remixicon@3.0.0/fonts/remixicon.css" rel="stylesheet">
@@ -13,14 +13,14 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Responsive portfolio website - Bedimcode</title>
+      <title>Responsive portfolio website</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
       <header class="header" id="header">
          <nav class="nav container">
             <a href="#" class="nav__logo">
-               Patrick <span>Moz</span>
+               Ahmad <span>Siddiq</span>
             </a>
 
             <div class="nav__menu" id="nav-menu">
@@ -67,7 +67,7 @@
                      </h3>
 
                      <h1 class="home__title">
-                        Patrick Moz
+                        Ahmad Siddiq
                      </h1>
 
                      <h3 class="home__education">
@@ -389,7 +389,33 @@
 
       <!--==================== FOOTER ====================-->
       <footer class="footer">
-         
+         <div class="footer__container container grid">
+            <div>
+               <h1 class="footer__title">
+                  Ahmad <span>Siddiq</span>
+               </h1>
+   
+               <h2 class="footer__education">
+                  Front-end Developer
+               </h2>
+            </div>
+
+            <div class="footer__social">
+               <a href="https://www.facebook.com/" class="footer__social-link">
+                  <i class="ri-facebook-circle-line"></i>
+               </a>
+               <a href="https://www.instagram.com/" class="footer__social-link">
+                  <i class="ri-instagram-line"></i>
+               </a>
+               <a href="https://twitter.com/" class="footer__social-link">
+                  <i class="ri-twitter-line"></i>
+               </a>
+   
+            </div>
+            <span class="footer__copy">
+               &#169; Copyright Ahmadcode. All rights reserved
+            </span>
+         </div>
       </footer>
 
       <!--========== SCROLL UP ==========-->
